petclinic-deployment.yaml
apiVersion: apps/v1beta1
kind: Deployment
metadata:
  name: petclinic
spec:
  replicas: 4
  template:
    metadata:
      labels:
        app: maven
    spec:
      containers:
      - name: petclinic
        image: nielslemmens/spring-petclinic
        ports:
        - containerPort: 8080
