kubernetes-ingress.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: nginx-ingress-controller
  namespace: nginx-ingress
spec:
  replicas: 2
  selector:
    matchLabels:
        k8s-app: nginx-ingress-lb
  template:
    metadata:
      labels:
        k8s-app: nginx-ingress-lb
    spec:
      serviceAccountName: nginx-ingress-serviceaccount
      containers:
        - name: nginx-ingress-controller
          image: gcr.io/google_containers/nginx-ingress-controller:0.9.0-beta.11
          args:
             - /nginx-ingress-controller
             - --default-backend-service=default/default-http-backend
          ports:
          - name: http
            containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: nginx-ingress
  namespace: nginx-ingress
spec:
# Can also use LoadBalancer type
  type: NodePort
  ports:
  - name: http
    port: 80
    nodePort: 30080
    targetPort: 80
    protocol: TCP
  selector:
    k8s-app: nginx-ingress-lb
