petclinic-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: petclinic
  labels:
    run: petclinic
spec:
  ports:
  - port: 8080
    protocol: TCP
  selector:
    run: petclinic
