petclinic-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
 name: petclinic-ingress
spec:
 rules:
   - host: petclinic
     http:
       paths:
         - path: /
           backend:
             serviceName: petclinic
             servicePort: 8080
