petclinic.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: petclinic
  annotations:
    ingress.kubernetes.io/rewrite-target: /
    ingress.kubernetes.io/ssl-redirect: "false"
spec:
  rules:
  - http:
      paths:
      - path: /
        backend:
             serviceName: petclinic
             servicePort: 8080

---

apiVersion: v1
kind: Service
metadata:
  name: petclinic
  labels:
    app: petclinic
spec:
  type: NodePort
  ports:
  - port: 80
    targetPort: 8080
    nodePort: 30100
    protocol: TCP
  selector:
    app: petclinic

---

apiVersion: apps/v1beta1
kind: Deployment
metadata:
  name: petclinic
spec:
  replicas: 2
  template:
    metadata:
      labels:
        app: petclinic
    spec:
      containers:
      - name: petclinic
        image: nielslemmens/spring-petclinic
        ports:
        - containerPort: 8080
